Adapt for older Jenkins